openshift-deployment/openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ejb-modernizer
  labels:
    app.kubernetes.io/name: ejb-modernizer
    app.kubernetes.io/part-of: ejb-client-modernizer
